# atlas

./: README.md  pyproject.toml  requirements.txt
data/: ontology.yaml
data/graphs/: agentbench.graphml  ai_scientist.graphml  ai_scientist.json  aide.graphml  aide.json  autokaggle.graphml  autokaggle.json  camel.graphml  camel.json  datainterpreter.graphml  datainterpreter.json  metagpt.graphml  metagpt.json  openhands.graphml  openhands.json  swe_agent.graphml  swe_agent.json  voyager.graphml  voyager.json
data/papers/: agentbench.txt  ai_scientist.txt  aide.txt  autokaggle.txt  camel.txt  datainterpreter.txt  megagpt.txt  openhands.txt  swe_agent.txt  voyager.txt
data/results/: 06_concept_alignment.ipynb  clusters_10papers.csv  clusters_6papers.csv  clusters_7papers.csv  clusters_8papers.csv  clusters_9papers.csv  concept_graph_10papers.graphml  concept_graph_6papers.graphml  concept_graph_7papers.graphml  concept_graph_8papers.graphml  concept_graph_9papers.graphml  concept_matches_10papers.csv  concept_matches_6papers.csv  concept_matches_7papers.csv  concept_matches_8papers.csv  concept_matches_9papers.csv  concepts_10papers.csv  concepts_6papers.csv  concepts_7papers.csv  concepts_8papers.csv  concepts_9papers.csv  paper_similarity.csv  paper_similarity_10papers.csv  paper_similarity_6papers.csv  (+7 more)
docs/: research_logs.md  research_notes.md  roadmap.md
notebooks/: 03_compare_papers.ipynb  04_paper_similarity.ipynb  05_global_graph.ipynb  06_concept_alignment.ipynb  atlas_demo_v0.ipynb  atlas_graph.graphml  atlas_v1.ipynb  demo.ipynb  graph.json
(+10 files in other folders)
