[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "Knowledge Graph Construction and Semantic Mapping of Agentic AI Literature"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
atlas = "atlas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
